fix: alignment of the credit card form

--- a/Bank/front-end/credit-card-input/src/app/credit-card/credit-card.component.css
+++ b/Bank/front-end/credit-card-input/src/app/credit-card/credit-card.component.css
@@ -16,6 +16,8 @@
     outline: none;
   }
   body {
+    border-radius: 20px;
+    justify-self: center;
     display: flex;
     height: 500px;
     width: 620px;
